objects/QuoteIntegrationSettings__c.object
<CustomObject><fields>
        <fullName>CommerceQuoteURL__c</fullName>
        <label>CommerceQuoteURL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GQOQuoteBaseURL__c</fullName>
        <label>GQOQuoteBaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mathwork_Quote_Url__c</fullName>
        <label>Mathwork Quote Url</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PageSizeForPaginationToShowQuotes__c</fullName>
        <label>PageSizeForPaginationToShowQuotes</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>Quote Integration custom setting of the org</description><enableFeeds>false</enableFeeds><label>Quote Integration Settings</label><visibility>Public</visibility></CustomObject>